--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ anyhow = "1.0.71"
 axum = { git = "https://github.com/tokio-rs/axum", features = ["tracing", "http2"], optional = true }
 axum-server = { version = "0.5.1", features = ["tls-rustls"] }
 base64 = "0.21.0"
+bincode = "1.3.3"
 blake3 = { version = "1.3.3" }
+chrono = { version = "0.4.24", features = ["serde"] }
 clap = { version = "4.2.7", features = ["derive"] }
 clap-verbosity-flag = "2.0.1"
 directories = "5.0.1"
